<!DOCTYPE resources [
    <!ENTITY appname "PeakRinger">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="tips">Prompt</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no_prompting">Don\'t show again</string>
    <string name="err_pr_content">Error:Not set content!</string>
    <string name="need_follow_permissions">Require permissions as followed</string>
    <string name="authorize">Authorize</string>
    <string name="authorize_already">Authorized</string>
    <string name="request_permission_failed">Failed to get permission to %s. Please try again(%s).</string>
    <string name="loading">Loading, please wait</string>
    <string name="jump_detail_failed">Failed to jump to the application details page</string>
    <string name="time_sec">seconds</string>
    <string name="time_min">minutes</string>
    <string name="time_hour">hours</string>
    <string name="time_day">days</string>
</resources>